# mtg-mcp-server

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  mise.toml  pyproject.toml  server.json  smithery.yaml
.claude/: settings.json
.claude/agents/: code-reviewer.md
.claude/skills/capture-fixture/: SKILL.md
.claude/skills/new-provider/: SKILL.md
.claude/skills/smoke-test/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  claude-code-review.yml  codeql.yml  publish.yml
docs/: ARCHITECTURE.md  CACHING_DESIGN.md  COOKBOOK.md  DATA_SOURCES.md  PLAN_BRANCH_A_STRUCTURED_OUTPUT_RULES.md  PLAN_BRANCH_B_FORMAT_WORKFLOWS.md  PROJECT_PLAN.md  README.md  RELEASE_NOTES_v2.md  RELEASE_NOTES_v3.md  SERVICE_CONTRACTS.md  SPEC_CROSS_FORMAT_TOOLS.md  SPEC_FORMAT_WORKFLOWS.md  SPEC_INFRASTRUCTURE_MODERNIZATION.md  TOOL_DESIGN.md
docs/superpowers/plans/: 2026-04-03-v3-release.md
docs/superpowers/specs/: 2026-04-03-v3-release-design.md
scripts/: check_smithery_schema.py  update_smithery_metadata.sh
src/mtg_mcp/: __init__.py  config.py  logging.py  server.py  types.py
src/mtg_mcp/providers/: __init__.py  edhrec.py  mtgjson.py  scryfall.py  seventeen_lands.py  spellbook.py
src/mtg_mcp/services/: base.py  cache.py  edhrec.py  mtgjson.py  scryfall.py  seventeen_lands.py  spellbook.py
src/mtg_mcp/workflows/: analysis.py  card_resolver.py  commander.py  deck.py  draft.py  server.py
src/mtg_mcp_server/: __init__.py  config.py  logging.py  server.py  smithery.py  types.py
src/mtg_mcp_server/providers/: __init__.py  edhrec.py  moxfield.py  mtggoldfish.py  mtgjson.py  scryfall.py  scryfall_bulk.py  seventeen_lands.py  spellbook.py  spicerack.py
src/mtg_mcp_server/services/: __init__.py  base.py  cache.py  edhrec.py  moxfield.py  mtggoldfish.py  mtgjson.py  rules.py  scryfall.py  scryfall_bulk.py  seventeen_lands.py  spellbook.py  spicerack.py
src/mtg_mcp_server/utils/: __init__.py  color_identity.py  decklist.py  format_rules.py  formatters.py  fuzzy.py  mana.py  query_parser.py  slim.py
src/mtg_mcp_server/workflows/: __init__.py  analysis.py  building.py  card_resolver.py  commander.py  commander_depth.py  constructed.py  deck.py  draft.py  draft_limited.py  mana_base.py  metagame.py  pricing.py  rules.py  server.py  sideboard.py  validation.py
tests/: __init__.py  conftest.py  test_orchestrator.py  test_parameter_descriptions.py  test_smithery_schema.py  test_smoke.py
tests/fixtures/: README.md
tests/fixtures/edhrec/: card_spore_frog.json  commander_muldrotha.json  commander_not_found.json
tests/fixtures/moxfield/: deck_commander.json  search_decks.json  user_search.json
tests/fixtures/mtggoldfish/: archetype_boros_energy.html  deck_download.txt  error_not_found.html  format_staples_modern.html  metagame_modern.html
tests/fixtures/rules/: comprehensive_rules.txt
tests/fixtures/scryfall/: card_muldrotha.json  card_not_found.json  card_shatterskull_smashing.json  card_sol_ring.json  rulings_muldrotha.json  rulings_sol_ring.json  search_sultai_commander.json  set_dominaria.json
tests/fixtures/scryfall_bulk/: bulk_metadata.json  oracle_cards_sample.json
tests/fixtures/seventeen_lands/: card_ratings_lci.json  color_ratings_lci.json
tests/fixtures/spellbook/: combo_detail.json  combos_muldrotha.json  combos_not_found.json  estimate_bracket_response.json  find_my_combos_response.json
tests/fixtures/spicerack/: error_invalid_format.json  tournaments_legacy.json
tests/integration/: conftest.py  test_bulk_data_e2e.py  test_orchestrator_e2e.py
tests/live/: conftest.py  test_smoke.py
tests/providers/: __init__.py  test_edhrec_provider.py  test_edhrec_resources.py  test_moxfield_provider.py  test_mtggoldfish_provider.py  test_mtgjson_provider.py  test_mtgjson_resources.py  test_scryfall_bulk_provider.py  test_scryfall_provider.py  test_scryfall_resources.py  test_seventeen_lands_provider.py  test_seventeen_lands_resources.py  test_spellbook_provider.py  test_spellbook_resources.py  test_spicerack_provider.py
tests/services/: __init__.py  test_base.py  test_cache.py  test_edhrec.py  test_moxfield.py  test_mtggoldfish.py  test_mtgjson.py  test_rules.py  test_scryfall.py  test_scryfall_bulk.py  test_seventeen_lands.py  test_spellbook.py  test_spicerack.py
tests/utils/: test_color_identity.py  test_decklist.py  test_format_rules.py  test_fuzzy.py  test_mana.py  test_query_parser.py  test_slim.py
tests/workflows/: __init__.py  test_analysis.py  test_building.py  test_card_resolver.py  test_commander.py  test_commander_depth.py  test_commander_new.py  test_constructed.py  test_context_progress.py  test_deck.py  test_draft.py  test_draft_limited.py  test_draft_overview.py  test_mana_base.py  test_metagame.py  test_pricing.py  test_prompts.py  test_rules.py  test_sideboard.py  test_validation.py  test_workflow_server.py
